[gd_scene load_steps=2 format=3 uid="uid://bqx8k2m3n4p5q"]

[ext_resource type="Script" uid="uid://bm1fjni3dodoa" path="res://scenes/TestScene.gd" id="1_test"]

[node name="TestScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_test")

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TestPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6

[node name="TestScrollContainer" type="ScrollContainer" parent="MainContainer/TestPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TestVBox" type="VBoxContainer" parent="MainContainer/TestPanel/TestScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox"]
layout_mode = 2
text = "GuildSim Game Test Suite"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox"]
layout_mode = 2

[node name="SystemControl" type="VBoxContainer" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox"]
layout_mode = 2

[node name="SystemControlLabel" type="Label" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/SystemControl"]
layout_mode = 2
text = "System Control"
horizontal_alignment = 1

[node name="SystemControlButtons" type="GridContainer" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/SystemControl"]
layout_mode = 2
columns = 2

[node name="InitializeServices" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/SystemControl/SystemControlButtons"]
layout_mode = 2
text = "Initialize Services"

[node name="ResetServices" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/SystemControl/SystemControlButtons"]
layout_mode = 2
text = "Reset Services"

[node name="FoundationTests" type="VBoxContainer" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox"]
layout_mode = 2

[node name="FoundationLabel" type="Label" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/FoundationTests"]
layout_mode = 2
text = "Foundation Tests"
horizontal_alignment = 1

[node name="FoundationButtons" type="GridContainer" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/FoundationTests"]
layout_mode = 2
columns = 2

[node name="TestCharacter" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/FoundationTests/FoundationButtons"]
layout_mode = 2
text = "Test Character Creation"

[node name="TestQuest" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/FoundationTests/FoundationButtons"]
layout_mode = 2
text = "Test Quest Creation"

[node name="TestEvent" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/FoundationTests/FoundationButtons"]
layout_mode = 2
text = "Test Event System"

[node name="TestConfig" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/FoundationTests/FoundationButtons"]
layout_mode = 2
text = "Test Configuration"

[node name="TestSave" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/FoundationTests/FoundationButtons"]
layout_mode = 2
text = "Test Save System"

[node name="TestServices" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/FoundationTests/FoundationButtons"]
layout_mode = 2
text = "Test Service Layer"

[node name="HSeparator2" type="HSeparator" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox"]
layout_mode = 2

[node name="UITests" type="VBoxContainer" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox"]
layout_mode = 2

[node name="UILabel" type="Label" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/UITests"]
layout_mode = 2
text = "UI & Navigation Tests"
horizontal_alignment = 1

[node name="UIButtons" type="GridContainer" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/UITests"]
layout_mode = 2
columns = 2

[node name="TestUINavigation" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/UITests/UIButtons"]
layout_mode = 2
text = "Test UI Navigation"

[node name="TestCharacterUI" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/UITests/UIButtons"]
layout_mode = 2
text = "Test Character UI"

[node name="TestQuestUI" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/UITests/UIButtons"]
layout_mode = 2
text = "Test Quest UI"

[node name="TestGuildUI" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/UITests/UIButtons"]
layout_mode = 2
text = "Test Guild UI"

[node name="TestSettingsUI" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/UITests/UIButtons"]
layout_mode = 2
text = "Test Settings UI"

[node name="TestUIManager" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/UITests/UIButtons"]
layout_mode = 2
text = "Test UI Manager"

[node name="HSeparator3" type="HSeparator" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox"]
layout_mode = 2

[node name="GameplayTests" type="VBoxContainer" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox"]
layout_mode = 2

[node name="GameplayLabel" type="Label" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/GameplayTests"]
layout_mode = 2
text = "Gameplay Tests"
horizontal_alignment = 1

[node name="GameplayButtons" type="GridContainer" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/GameplayTests"]
layout_mode = 2
columns = 2

[node name="TestRecruitment" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/GameplayTests/GameplayButtons"]
layout_mode = 2
text = "Test Character Recruitment"

[node name="TestQuestAssignment" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/GameplayTests/GameplayButtons"]
layout_mode = 2
text = "Test Quest Assignment"

[node name="TestTraining" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/GameplayTests/GameplayButtons"]
layout_mode = 2
text = "Test Character Training"

[node name="TestEquipment" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/GameplayTests/GameplayButtons"]
layout_mode = 2
text = "Test Equipment System"

[node name="TestGuildManagement" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/GameplayTests/GameplayButtons"]
layout_mode = 2
text = "Test Guild Management"

[node name="TestQuestExecution" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/GameplayTests/GameplayButtons"]
layout_mode = 2
text = "Test Quest Execution"

[node name="HSeparator4" type="HSeparator" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox"]
layout_mode = 2

[node name="IntegrationTests" type="VBoxContainer" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox"]
layout_mode = 2

[node name="IntegrationLabel" type="Label" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/IntegrationTests"]
layout_mode = 2
text = "Integration Tests"
horizontal_alignment = 1

[node name="IntegrationButtons" type="GridContainer" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/IntegrationTests"]
layout_mode = 2
columns = 2

[node name="TestFullGameplay" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/IntegrationTests/IntegrationButtons"]
layout_mode = 2
text = "Test Full Gameplay Loop"

[node name="TestSaveLoad" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/IntegrationTests/IntegrationButtons"]
layout_mode = 2
text = "Test Save/Load Cycle"

[node name="TestPerformance" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/IntegrationTests/IntegrationButtons"]
layout_mode = 2
text = "Test Performance"

[node name="TestStress" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/IntegrationTests/IntegrationButtons"]
layout_mode = 2
text = "Test Stress Scenarios"

[node name="TestErrorHandling" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/IntegrationTests/IntegrationButtons"]
layout_mode = 2
text = "Test Error Handling"

[node name="TestAllSystems" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/IntegrationTests/IntegrationButtons"]
layout_mode = 2
text = "Test All Systems"

[node name="HSeparator5" type="HSeparator" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox"]
layout_mode = 2

[node name="ControlButtons" type="HBoxContainer" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox"]
layout_mode = 2

[node name="ClearOutput" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/ControlButtons"]
layout_mode = 2
text = "Clear Output"

[node name="LaunchGame" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/ControlButtons"]
layout_mode = 2
text = "Launch Full Game"

[node name="ClearDemo" type="Button" parent="MainContainer/TestPanel/TestScrollContainer/TestVBox/ControlButtons"]
layout_mode = 2
text = "ClearDemo"

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OutputPanel" type="Panel" parent="MainContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Output" type="RichTextLabel" parent="MainContainer/VBoxContainer/OutputPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "Click buttons to test game systems..."
scroll_following = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="MainContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
stretch = true
mouse_target = true

[node name="DemoDisplay" type="SubViewport" parent="MainContainer/VBoxContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(718, 430)
render_target_update_mode = 4
